deployments/k8s-openshift/deploy.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: yaam
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yaam
spec:
  rules:
    - host: yaam.some-domain
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: yaam
                port:
                  number: 25213
---
apiVersion: v1
kind: Service
metadata:
  name: yaam
  labels:
    app: yaam
spec:
  ports:
    - port: 25213
      name: yaam
  selector:
    app: yaam
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: yaam
  labels:
    app: yaam
spec:
  serviceName: yaam
  selector:
    matchLabels:
      app: yaam
  replicas: 2
  template:
    metadata:
      labels:
        app: yaam
    spec:
      containers:
        - name: yaam
          image: utrecht/yaam:v0.5.3
          livenessProbe:
            httpGet:
              path: /status
              port: 25213
          readinessProbe:
            httpGet:
              path: /status
              port: 25213
          resources:
            limits:
              cpu: 480m
              memory: 30Mi
            requests:
              cpu: 96m
              memory: 5Mi
          ports:
            - containerPort: 25213
              name: yaam
          volumeMounts:
            - name: conf
              mountPath: /opt/yaam/.yaam
            - name: repositories
              mountPath: /opt/yaam/.yaam/repositories
            - name: logs
              mountPath: /opt/yaam/.yaam/logs
      volumes:
        - name: conf
          configMap:
            name: conf
        - name: repositories
          persistentVolumeClaim:
            claimName: repositories
        - name: logs
          persistentVolumeClaim:
            claimName: logs
